--- a/2048/Base.lproj/LaunchScreen.storyboard
+++ b/2048/Base.lproj/LaunchScreen.storyboard
@@ -24,8 +24,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright (c) 2019 Alexander Andreev. All rights reserved." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="rix-W1-fOc">
-                                <rect key="frame" x="20" y="841" width="374" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright (c) 2019 Alexander Andreev. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="rix-W1-fOc">
+                                <rect key="frame" x="20" y="821" width="374" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -33,11 +33,11 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rix-W1-fOc" secondAttribute="bottom" id="4zK-nQ-N18"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rix-W1-fOc" secondAttribute="bottom" constant="20" id="4zK-nQ-N18"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rix-W1-fOc" secondAttribute="trailing" constant="20" id="A0P-P9-C7K"/>
+                            <constraint firstItem="rix-W1-fOc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="g0z-pv-7aS"/>
                             <constraint firstItem="dN5-BH-dnA" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="kON-6i-mso"/>
                             <constraint firstItem="dN5-BH-dnA" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="pie-3H-M3u"/>
-                            <constraint firstItem="rix-W1-fOc" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="roG-22-qs4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
